--- a/style2.css
+++ b/style2.css
@@ -6,6 +6,12 @@ h3{
 font-family: 'Happy Monkey', cursive;
 
 }
+h1{
+font-family: 'Happy Monkey', cursive;
+}
+h2{
+font-family: 'Happy Monkey', cursive;
+}
 .button{background-color:pink;}
 p{
 font-family: 'Happy Monkey', cursive;
@@ -26,11 +32,46 @@ font-family: 'Happy Monkey', cursive;
 
 
 }
-.button{
-  width: 200px;
-  height: 80px;
-  border: 3px solid black;
-  font-size: 26px;
-  background-color:rgb(27, 91, 32);
+.button {
+  background-color:rgb(132, 244, 137); /* Green */
+  border:6px solid rgb(23, 104, 25);
+  color: green;
+  padding: 30px 60px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 30px;
+  font-family: 'Happy Monkey', cursive;
+  border-radius: 50%;
+}
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color:rgb(7, 122, 20);
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
   color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
 }
